Fix comments input box width to avoid overlay with publish button on mobile layout

--- a/styles.css
+++ b/styles.css
@@ -287,7 +287,7 @@ label {
 }
 
 .comment-input-box > input {
-    width: 80%;
+    width: 75%;
     height: 28px;
     color: #979797;
     font-size: 12px;
@@ -533,6 +533,7 @@ label {
     font-size: 11px;
     line-height: 13px;
 }
+
 
 .mobile, 
 .container-footer {
